fixed z-index of nav

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ nav {
   justify-content: space-around;
   padding: 5px 0 5px 0;
   border-bottom: 2px solid black;
+  z-index: 1;
 }
 
 .shop-title {
@@ -396,6 +397,7 @@ main {
   height: 80%;
   width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .product-img button {
